fix: Adjust text and screenshot layout on small form factor devices
Adjust text and screenshot layout on small form factor device to address readibility issues.

Resolves: Issues #10 & #11
See also: N/a

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,8 +1,4 @@
 @media screen and (min-width: 320px) and (max-width: 376px) {
-  .featured-work article img {
-    width: 48%;
-  }
-
   .footer-wrapper {
     width: 100%;
   }
@@ -39,6 +35,10 @@
     font-size: 1em;
   }
 
+  .article-text {
+    margin: 1em .75em 1em .75em;
+  }
+
   .featured-publications {
     font-size: 1em;
   }
@@ -49,11 +49,15 @@
 }
 
 @media screen and (min-width: 425px) and (max-width: 769px) {
-  .featured-work article img {
-    width: 48%;
-  }
-
   .footer-wrapper {
     width: 50%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .featured-work article img {
+    display: flex;
+    justify-content: center;
+    width: 90%;
   }
 }
